--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.0.0",
     "prettier": "2.0.5",
     "tailwindcss": "^1.4.6",
     "typescript": "^3.9.5"
