--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-sharp": "^2.6.11",
     "gatsby-source-filesystem": "^2.3.11",
+    "gatsby-source-youtube-v2": "^1.0.1",
     "gatsby-transformer-sharp": "^2.5.5",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "@types/react-helmet": "^6.0.0",
+    "@types/react-transition-group": "^4.4.0",
     "prettier": "2.0.5",
     "tailwindcss": "^1.4.6",
     "typescript": "^3.9.5"
