--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "react-youtube": "^7.11.2"
   },
   "devDependencies": {
     "@types/react-helmet": "^6.0.0",
