--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "grgur-com",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "description": "Grgur.com website",
+  "version": "2.0.0",
+  "author": "Grgur Grisogono <grgur@grgur.com>",
   "dependencies": {
     "@grgur/gatsby-source-youtube-v3": "1.0.0",
+    "@tailwindcss/ui": "^0.3.0",
     "gatsby": "^2.23.3",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-manifest": "^2.4.11",
@@ -30,7 +31,7 @@
     "typescript": "^3.9.5"
   },
   "keywords": [
-    "gatsby"
+    "grgur"
   ],
   "license": "MIT",
   "scripts": {
