--- a/package.json
+++ b/package.json
@@ -24,9 +24,16 @@
     "react-youtube": "^7.11.2"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.3",
     "@types/react-helmet": "^6.0.0",
+    "@types/react-test-renderer": "^16.9.2",
     "@types/react-transition-group": "^4.4.0",
+    "babel-jest": "^26.1.0",
+    "babel-preset-gatsby": "^0.5.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.1.0",
     "prettier": "2.0.5",
+    "react-test-renderer": "^16.13.1",
     "tailwindcss": "^1.4.6",
     "typescript": "^3.9.5"
   },
@@ -41,7 +48,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest",
+    "test:doc": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
     "type": "git",
