--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-youtube": "^7.11.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/react": "^10.4.4",
     "@types/jest": "^26.0.3",
     "@types/react-helmet": "^6.0.0",
     "@types/react-test-renderer": "^16.9.2",
