--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Grgur Grisogono <grgur@grgur.com>",
   "dependencies": {
     "@grgur/gatsby-source-youtube-v3": "1.0.0",
-    "@tailwindcss/ui": "^0.3.0",
+    "@tailwindcss/ui": "^0.6.2",
     "gatsby": "^2.23.3",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-manifest": "^2.4.11",
@@ -20,6 +20,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^8.29.0",
     "react-transition-group": "^4.4.1",
     "react-youtube": "^7.11.2"
   },
@@ -36,7 +37,7 @@
     "jest": "^26.1.0",
     "prettier": "2.0.5",
     "react-test-renderer": "^16.13.1",
-    "tailwindcss": "^1.4.6",
+    "tailwindcss": "^1.8.10",
     "typescript": "^3.9.5"
   },
   "keywords": [
