--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "dependencies": {
     "@grgur/gatsby-source-youtube-v3": "1.0.0",
     "@tailwindcss/ui": "^0.6.2",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.23.3",
     "gatsby-image": "^2.4.7",
+    "gatsby-plugin-google-gtag": "^2.1.13",
     "gatsby-plugin-manifest": "^2.4.11",
     "gatsby-plugin-offline": "^3.2.9",
     "gatsby-plugin-postcss": "^2.3.4",
