--- a/package.json
+++ b/package.json
@@ -8,25 +8,27 @@
     "@grgur/gatsby-source-youtube-v3": "1.0.0",
     "@tailwindcss/ui": "^0.6.2",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.23.3",
-    "gatsby-image": "^2.4.7",
+    "gatsby": "^2.24.84",
+    "gatsby-image": "^2.4.21",
     "gatsby-plugin-google-gtag": "^2.1.13",
-    "gatsby-plugin-manifest": "^2.4.11",
-    "gatsby-plugin-offline": "^3.2.9",
-    "gatsby-plugin-postcss": "^2.3.4",
-    "gatsby-plugin-react-helmet": "^3.3.4",
-    "gatsby-plugin-sharp": "^2.6.11",
-    "gatsby-source-filesystem": "^2.3.11",
-    "gatsby-transformer-sharp": "^2.5.5",
+    "gatsby-plugin-manifest": "^2.4.35",
+    "gatsby-plugin-offline": "^3.2.36",
+    "gatsby-plugin-postcss": "^3.0.3",
+    "gatsby-plugin-preact": "^4.0.16",
+    "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-sharp": "^2.6.43",
+    "gatsby-source-filesystem": "^2.3.35",
+    "gatsby-transformer-sharp": "^2.5.19",
+    "preact": "^10.5.5",
+    "preact-render-to-string": "^5.1.10",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.29.0",
     "react-transition-group": "^4.4.1",
     "react-youtube": "^7.11.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.4",
     "@types/jest": "^26.0.3",
@@ -37,9 +39,9 @@
     "babel-preset-gatsby": "^0.5.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.1.0",
-    "prettier": "2.0.5",
+    "prettier": "2.1.2",
     "react-test-renderer": "^16.13.1",
-    "tailwindcss": "^1.8.10",
+    "tailwindcss": "^1.9.5",
     "typescript": "^3.9.5"
   },
   "keywords": [
