--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "preact": "^10.5.5",
     "preact-render-to-string": "^5.1.10",
     "prop-types": "^15.7.2",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.29.0",
     "react-transition-group": "^4.4.1",
