--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
         env:
           NETLIFY_HOOK_TOKEN: ${{ secrets.NETLIFY_HOOK_TOKEN }}
         run: |
-          curl -X POST -d {} https://api.netlify.com/build_hooks/$
+          curl -X POST -d {} https://api.netlify.com/build_hooks/$NETLIFY_HOOK_TOKEN
